Start adding extra opt-ins and logic for preventing footguns

--- a/packages/back-end/src/api/openapi/schemas/SavedGroup.yaml
+++ b/packages/back-end/src/api/openapi/schemas/SavedGroup.yaml
@@ -36,3 +36,6 @@ properties:
       type: string
   description:
     type: string
+  passByReferenceOnly:
+    description: Whether the saved group must be referenced by ID rather than its list of members for performance reasons
+    type: boolean
